--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,10 @@ section {
   padding-top: 60px;
   margin-top: -60px;
 }
+
+/* Ensure global styles don't conflict */
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: 'Sora', sans-serif;
+}
