--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -18,11 +18,9 @@ body {
   align-items: flex-start;
   padding: 60px 80px;
   isolation: isolate;
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
-  left: 0px;
-  top: 104px;
   background: #f8f8f8;
 }
 
