--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -156,6 +156,8 @@ body {
 }
 
 .home-page-figure img {
-  max-width: 90%;
+  max-width: 80%;
   height: auto;
+  margin-left: 100px;
+  margin-top: -70px;
 }
