--- a/src/components/About.css
+++ b/src/components/About.css
@@ -16,7 +16,6 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  gap: 120px;
 }
 
 .about-title {
@@ -65,10 +64,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: -100px;
 }
 
 .about-me-figure img {
-  max-width: 100%;
   height: auto;
   border-radius: 10px;
+  width: 600px;
 }
